...

                        <TextView
                            android:id="@+id/txtProfileUserFollowing"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Theo dõi" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
...
                            android:src="@drawable/cart"
                            android:layout_gravity="center"
                            android:layout_width="40dp"
                            android:layout_height="40dp" />
                        <Button
                            style="?android:attr/borderlessButtonStyle"
                            android:id="@+id/btnProfileGoMarket"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#fff"
                            android:paddingLeft="5dp"
                            android:text="Đi chợ"
                            android:textAlignment="viewStart" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
...
                            android:src="@drawable/star"
                            android:layout_gravity="center"
                            android:layout_width="40dp"
                            android:layout_height="40dp" />
                        <Button
                            style="?android:attr/borderlessButtonStyle"
                            android:id="@+id/btnProfileFavorite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#fff"
                            android:paddingLeft="5dp"
                            android:text="Yêu thích"
                            android:textAlignment="viewStart" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginBottom="4dp"
                        android:layout_width="match_parent"
...
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="3dp"
                    android:background="#cccccc" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvProfileImgPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>
...
