<?xml version="1.0" encoding="utf-8"?>
    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardUseCompatPadding="true"
        android:id="@+id/cvTopPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:elevation="10dp">
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/cvTopPostUserAvatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_circle_image" />

...
                        android:background="@drawable/three_dot_vertical" />
                </RelativeLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/cvTopPostImgContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp" />

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/cvTopPostBtnLike"
                    android:src="@drawable/likeunactive"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
                <TextView
                    android:textSize="18sp"
                    android:layout_marginLeft="8dp"
...
                    android:id="@+id/cvTopPostTvLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0" />
                <ImageView
                    android:layout_marginTop="3dp"
                    android:id="@+id/cvTopPostBtnComment"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/commenting"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
                <TextView
                    android:textSize="18sp"
...
