...
        android:background="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:padding="8dp"
            android:id="@+id/edt_comment"
            android:maxLines="10"
            android:layout_margin="8dp"
            android:background="@drawable/editext_border"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_send_comment"
            android:text="Gửi"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:layout_width="60dp"
            android:layout_height="40dp" />
    </LinearLayout>
</RelativeLayout>
...
