...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/relativeLayout4"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/colorPrimary">

                        <ImageView
                            android:id="@+id/btn_back"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_centerVertical="true"
                            android:padding="12dp"
                            android:src="@drawable/back_arrow" />

...
                            android:layout_centerVertical="true"
                            android:layout_marginRight="135dp"
                            android:padding="10dp"
                            android:src="@drawable/agenda" />

                        <ImageView
                            android:id="@+id/btn_add_favourite"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="90dp"
                            android:padding="10dp"
...
